--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,30 @@
-dist: trusty
-sudo: false
- 
 language: node_js
 node_js:
   - "8"
-  
+
+branches:
+  only:
+    - master
+
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
+
+before_script:
+  - yarn global add @angular/cli
  
 cache:
+  yarn: true
   directories:
-     - ./node_modules
- 
-install:
-  - npm install
+    - node_modules
+
  
 script:
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
   - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  keep-history: true
+  local-dir: ./dist/
+  on:
