--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,9 @@ cache:
   directories:
     - node_modules
 
+
+install:
+  - npm install
  
 script:
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
