--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
 script:
   - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
   - npm run e2e -- --protractor-config=e2e/protractor-ci.conf.js
+  - npm run build --prod
 
 deploy:
   provider: pages
